# unraveled

./: README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml  launcher.py
samples/247ctf/beginner_tutorial/new_challenge_releases/: instructions.txt
samples/247ctf/beginner_tutorial/socket_challenges/: flag.txt  instructions.txt
samples/247ctf/beginner_tutorial/tips_and_tricks/: instructions.txt  test_read.py
samples/247ctf/beginner_tutorial/web_challenges/: instructions.txt
src/unraveled/container/: service.py
src/unraveled/ctf_bot/: challenge.py  context_challenge.py  hello_challenge.py
src/unraveled/ctf_bot/agents/: ctf_agent.py
src/unraveled/test/: __init__.py  test_ai_client.py
src/unraveled/tools/: code.py  shell.py
src/unraveled/workflows/agentic/: config.py  dapr.yaml
src/unraveled/workflows/agentic/components/: agentstatestore.yaml  messagepubsub.yaml  workflowstatestore.yaml
src/unraveled/workflows/agentic/services/captain/: app.py
src/unraveled/workflows/agentic/services/coder/: app.py
src/unraveled/workflows/agentic/services/orchestrator/: app.py
src/unraveled/workflows/agentic/services/socket/: app.py
src/unraveled/workflows/agentic/test/: test_socket_challenge.py
