[project]
name = "unraveled"
version = "0.1.0"
description = "Reverse engineering agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghidra-stubs",
    "google-generativeai>=0.8.3",
    "jep==4.2.0",
    "pydantic-ai>=0.0.15",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unraveled"]

[tool.hatch.build]
packages = ["src/unraveled"]

[tool.uv.sources]
ghidra-stubs = { path = "../../Downloads/ghidra_stubs-11.2.1.1.0.4-py2.py3-none-any.whl" }
