[project]
name = "unraveled"
version = "0.1.0"
description = "Reverse engineering agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.6",
    "google-generativeai>=0.8.3",
    "pydantic-ai>=0.0.15",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unraveled"]

[tool.hatch.build]
packages = ["src/unraveled"]
